# obs-ocr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/scripts/: .build.zsh
.github/workflows/: build-project.yaml
cmake/: BuildInja.cmake  BuildOpenCV.cmake  BuildTesseract.cmake  FetchOpenCV.cmake  FetchTesseract.cmake
cmake/common/: buildspec_common.cmake
data/: preview.effect
data/locale/: ar-SA.ini  de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  ja-JP.ini  pt-BR.ini  ru-RU.ini  zh-CN.ini
data/tessdata/: daktronics.traineddata  scoreboard.traineddata
docs/: BUILD-FEDORA.md
src/: consts.h  filter-data.h  obs-utils.cpp  obs-utils.h  ocr-filter-callbacks.cpp  ocr-filter-callbacks.h  ocr-filter-info.c  ocr-filter-properties.cpp  ocr-filter.cpp  ocr-filter.h  plugin-main.c  plugin-support.c.in  plugin-support.h  tesseract-ocr-utils.cpp  tesseract-ocr-utils.h  text-render-helper.cpp  text-render-helper.h
